Related Documents links - Insufficient contrast ratio Fixes #2384

--- a/examples/landmarks/css/common.css
+++ b/examples/landmarks/css/common.css
@@ -138,7 +138,6 @@ aside {
   padding: 0.5em;
   margin-top: 0.5em;
   margin-bottom: 1em;
-  background-color: #f4f4f4;
   margin-right: 12em;
   width: 100%;
   border-radius: 6px;
